--- a/Dockerfile-health
+++ b/Dockerfile-health
@@ -2,7 +2,7 @@ FROM rust:1.68.2-alpine3.17 AS chef
 USER root
 # remove the line below when switching to >=rust:1.70.0. sparse mode is planned to be the default in Rust 1.70.0
 ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
-RUN apk add --no-cache musl-dev & cargo install cargo-chef
+RUN apk add --no-cache musl-dev && cargo install cargo-chef
 WORKDIR /microservice-project
 
 FROM chef AS planner
