--- a/Dockerfile-health
+++ b/Dockerfile-health
@@ -1,8 +1,18 @@
-FROM rust:1.68.2-alpine3.17 AS chef
+FROM rust:1.75-alpine AS chef
 USER root
-# remove the line below when switching to >=rust:1.70.0. sparse mode is planned to be the default in Rust 1.70.0
-ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
-RUN apk add --no-cache musl-dev && cargo install cargo-chef
+
+# Actualizar repositorios e instalar todas las dependencias necesarias
+RUN apk update && apk add --no-cache \
+    musl-dev \
+    gcc \
+    libc-dev \
+    pkgconfig \
+    openssl-dev \
+    git
+
+# Instalar cargo-chef
+RUN cargo install cargo-chef
+
 WORKDIR /microservice-project
 
 FROM chef AS planner
@@ -11,10 +21,14 @@ RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
 COPY --from=planner /microservice-project/recipe.json recipe.json
+
 # Build dependencies - this is the caching Docker layer!
 RUN cargo chef cook --release --recipe-path recipe.json
+
+# Install protoc for the build step
+RUN apk add --no-cache protobuf-dev
+
 # Build application
-RUN apk add --no-cache protoc
 COPY . .
 RUN cargo build --release --bin health-check
 
