Adjusted rust version.

--- a/Dockerfile-health
+++ b/Dockerfile-health
@@ -1,4 +1,4 @@
-FROM rust:1.83-alpine AS chef
+FROM rustlang/rust:nightly-alpine AS builder
 USER root
 
 # Actualizar repositorios e instalar todas las dependencias necesarias
@@ -8,33 +8,19 @@ RUN apk update && apk add --no-cache \
     libc-dev \
     pkgconfig \
     openssl-dev \
-    git
-
-# Instalar cargo-chef
-RUN cargo install cargo-chef
+    git \
+    protobuf-dev
 
 WORKDIR /microservice-project
 
-FROM chef AS planner
+# Copy the entire project
 COPY . .
-RUN cargo chef prepare --recipe-path recipe.json
 
-FROM chef AS builder
-COPY --from=planner /microservice-project/recipe.json recipe.json
-
-# Build dependencies - this is the caching Docker layer!
-RUN cargo chef cook --release --recipe-path recipe.json
-
-# Install protoc for the build step
-RUN apk add --no-cache protobuf-dev
-
-# Build application
-COPY . .
+# Build the application
 RUN cargo build --release --bin health-check
 
 # We do not need the Rust toolchain to run the binary!
 FROM debian:buster-slim AS runtime
 WORKDIR /microservice-project
 COPY --from=builder /microservice-project/target/release/health-check /usr/local/bin
-ENV AUTH_SERVICE_HOST_NAME=auth
 ENTRYPOINT ["/usr/local/bin/health-check"]
