--- a/Dockerfile-auth
+++ b/Dockerfile-auth
@@ -1,4 +1,4 @@
-FROM rust:1.83-alpine AS chef
+FROM rustlang/rust:nightly-alpine AS builder
 USER root
 
 # Install build dependencies
@@ -8,28 +8,15 @@ RUN apk update && apk add --no-cache \
     libc-dev \
     pkgconfig \
     openssl-dev \
-    git
-
-# Install cargo-chef
-RUN cargo install cargo-chef
+    git \
+    protobuf-dev
 
 WORKDIR /microservice-project
 
-FROM chef AS planner
+# Copy the entire project
 COPY . .
-RUN cargo chef prepare --recipe-path recipe.json
 
-FROM chef AS builder
-COPY --from=planner /microservice-project/recipe.json recipe.json
-
-# Build dependencies - this is the caching Docker layer!
-RUN cargo chef cook --release --recipe-path recipe.json
-
-# Install protobuf compiler
-RUN apk add --no-cache protobuf-dev
-
-# Build application
-COPY . .
+# Build the application
 RUN cargo build --release --bin auth
 
 # We do not need the Rust toolchain to run the binary!
