--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -14,10 +14,10 @@ jobs:
       uses: arduino/setup-protoc@v1
 
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Cache dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.cargo
@@ -37,10 +37,10 @@ jobs:
         cargo test --verbose
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
@@ -59,28 +59,48 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install sshpass
-      run: sudo apt-get install sshpass
-
-    - name: Copy docker-compose.yml to droplet
-      run: sshpass -v -p ${{ secrets.DROPLET_PASSWORD }} scp -o StrictHostKeyChecking=no docker-compose.yaml root@${{ vars.DROPLET_IP }}:~
-
     - name: Deploy
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ vars.DROPLET_IP }}
         username: root
         password: ${{ secrets.DROPLET_PASSWORD }}
         script: |
+          echo "Starting deployment..."
           cd ~
+          echo "Creating docker-compose.yaml..."
+          cat > docker-compose.yaml << 'EOF'
+          services:
+            health-check:
+              image: mskdmage/health-check
+              build:
+                context: .
+                dockerfile: Dockerfile-health
+              restart: "always"
+              depends_on:
+                auth:
+                  condition: service_started
+            auth:
+              image: mskdmage/auth
+              build:
+                context: .
+                dockerfile: Dockerfile-auth
+              restart: "always"
+              ports:
+                - "50051:50051"
+          EOF
+          echo "Stopping existing containers..."
           docker-compose down
+          echo "Pulling latest images..."
           docker-compose pull
+          echo "Starting services..."
           docker-compose up -d
+          echo "Deployment completed successfully!"
